This file records noteworthy changes.

1.3.2 (<DATE>)
* GCD avoids to produce expanded expressions.
* Fixed bug in expanding expressions containing dummy indices.
* Fixed static initialization order bug.

1.3.1 (04 May 2005)
* integral() and eval_integ() can be used from ginsh.
* Integrals can be series-expanded.
* Fixed a library initialization problem.
* GiNaC compiles from tarball even if lex/flex is missing.
* Fixed bugs in canonicalize_clifford(), clifford_prime() and clifford_to_lst().
* clifford_moebius_map(), remove_dirac_ONE() and LaTeX output of Clifford
  objects now care about representation labels.
* Fixed bug in gcd.
* Better output for slashed expressions

1.3.0 (19 October 2004)
* The Clifford classes have been generalized to allow working with Clifford
  algebras generated by arbitrary symmetric tensors or matrices. Also, a lot
  of new functions for Clifford algebras have been added, including
  automorphisms and Moebius transformations. [V. Kisil]
* Added some basic symbolic and numeric integration facilities. [C. Dams]
* The multiple polylogarithm Li() now evaluates numerically for arbitrary
  arguments.
* New functions G(a,y) and G(a,s,y) added (another notation for multiple
  polylogarithms).

1.2.4 (12 October 2004)
* Added ex::unitcontprim() to compute the unit, content, and primitive parts
  of a polynomial in one go.
* binomial(n, k) evaluates for non-integer arguments n.
* Li(2,x) now evaluates for +-I.
* Optimized Li(2,x).
* Fixed bug in Li(n,x) (if Li(2,x) was calculated with high precision the
  enlargement of the look-up table caused a segmentation fault).
* Fixed another bug in the series expansion of powers, and a bug in
  power::info().

1.2.3 (13 August 2004)
* Added variants of dirac_trace() and color_trace() that take the trace over
  more than one representation label by specifying a set or list of labels.
* diracgamma::contract_with() uses Chisholm identities in 4 dimensions to
  produce more compact results.