@@ -10,7 +10,7 @@ Contributors of patches
 -----------------------
 
 Roberto Bagnara, Chris Dams, Do Hoang Son, Vladimir Kisil, Markus Nullmeier,
-Pearu Peterson, Benedikt Pluemper, Ben Sapp, Stefan Weinzierl.
+Pearu Peterson, Benedikt Pluemper, Ben Sapp, Alexei Sheplyakov, Stefan Weinzierl.
 (Please send email if you think you were forgotten.)
 
 
