@@ -4,6 +4,8 @@ This file records noteworthy changes.
 * GCD avoids to produce expanded expressions.
 * Fixed bug in expanding expressions containing dummy indices.
 * Fixed static initialization order bug.
+* collect_common_factors now works with powers.
+* Modernized configuration scripts.
 
 1.3.1 (04 May 2005)
 * integral() and eval_integ() can be used from ginsh.
